--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
      <a href="Milestone 0/Milestone 0 Build/Milestone 0 Build.html">Milestone 0</a>
    </p>
 
+   <p>
+     <a href="Milestone 1/Milestone 1 Build/Milestone 1 Build.html">Milestone 1</a>
+   </p>
+
  </body>
 </html>
